RVM-549 : Implement getCallerClass() for sun.reflect.Reflection.